Agregado efectos nuevos a los botones

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/generate"
         android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimaryDark"
+        android:theme="@style/MyButton"
+        android:textColor="@color/whiteText"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView" />
@@ -58,7 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/share"
-        android:background="@color/colorPrimary"
+        android:theme="@style/MyButtonShare"
+        android:textColor="@color/whiteText"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
