--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#920e59</color>
     <color name="colorPrimaryDark">#4f135d</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="whiteText">#ffffff</color>
 </resources>
